--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
 v0.7.2, 05.08.2020  -- some optimiations in berry_dipole, gyrotropic_Korb
 
-v0.7.2.1 11.08.2020 -- added parameter IBstart
+v0.7.2.1 11.08.2020 -- added parameter IBstart to vaspspn
+
+v0.7.2.2 16.08.2020 -- added parameter IBstart to mmn2uHu, some more docstrings, bugfix in wigner_seitz
+
