--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,3 +4,4 @@ v0.7.2.1 11.08.2020 -- added parameter IBstart to vaspspn
 
 v0.7.2.2 16.08.2020 -- added parameter IBstart to mmn2uHu, some more docstrings, bugfix in wigner_seitz
 
+v0.7.2.3 23.08.2020 -- fixed a byg in mmn2uHu
