--- a/tutorial/Pt_SHC_qe/README
+++ b/tutorial/Pt_SHC_qe/README
@@ -1,5 +1,5 @@
 
-This example shows how to calculate dynamical spin Hall conductivity of Pt
+This example shows how to calculate spin Hall conductivity of Pt
 from QUANTUM ESPRESSO. Run ./execute-example-qe to plot the real parts.
 
 0) Files included
@@ -21,7 +21,7 @@ from QUANTUM ESPRESSO. Run ./execute-example-qe to plot the real parts.
     generate the .chk file.
 
 3) WANNIERBERRI
-    make dynamical spin Hall conductivity data using Wannier interpolation.
+    make spin Hall conductivity data using Wannier interpolation.
     "opt_SHCqiao"(QZYZ 2018) and "opt_SHCryoo"(RPS 2019) are different
     in how to obtain spin-current matrix elements under the Wannier gauge.
     Also. opt_SHCqiao only requires .eig, .mmn, and .spn files while
