--- a/docs/source/tutorials/basic/tutorial-wb-basic.ipynb
+++ b/docs/source/tutorials/basic/tutorial-wb-basic.ipynb
@@ -872,7 +872,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -883,7 +883,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.8.10"
   }
  },
