--- a/docs/source/tutorials/DIY/tutorial-wb-DIY.ipynb
+++ b/docs/source/tutorials/DIY/tutorial-wb-DIY.ipynb
@@ -358,9 +358,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -371,7 +371,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.8.10"
   }
  },
