--- a/docs/source/tutorials/fermi_sea_vs_fermi_surface/tutorial_sea_vs_surface.ipynb
+++ b/docs/source/tutorials/fermi_sea_vs_fermi_surface/tutorial_sea_vs_surface.ipynb
@@ -871,7 +871,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -882,7 +882,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.8.10"
   }
  },
