--- a/docs/source/tutorials/symmetrization/Symmetrization_tutorial.ipynb
+++ b/docs/source/tutorials/symmetrization/Symmetrization_tutorial.ipynb
@@ -478,7 +478,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -489,7 +489,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.8.10"
   }
  },
