--- a/examples/wannierise+sitesym_Fe/wannierise.ipynb
+++ b/examples/wannierise+sitesym_Fe/wannierise.ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
       "\n",
       "\n",
       "Space group: magnetic-unknown (# None)\n",
-      "Number of symmetries: 8 (mod. lattice translations)\n",
+      "Number of symmetries: 16 (mod. lattice translations)\n",
       "\n",
       "The transformation from the DFT cell to the reference cell of tables is given by: \n",
       "        |   1.0000  0.0000  0.0000 |\n",
@@ -830,28 +830,163 @@
       "axis: [ 0. -0.  1.] ; angle = -1/2 pi, inversion : True\n",
       "\n",
       "time-reversal : False\n",
+      "\n",
+      " ### 9 \n",
+      "\n",
+      "rotation : |  0  -1  -1 |\n",
+      "           | -1   0   1 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-ky, -kx, -kx+ky-kz]\n",
+      "\n",
+      "spinor rot.         : | 0.000+0.000j  0.000-1.000j |\n",
+      "                      |-0.000-1.000j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 1. -0.  0.] ; angle = 1 pi, inversion : False\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 10 \n",
+      "\n",
+      "rotation : |  0   1   1 |\n",
+      "           |  1   0  -1 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [ky, kx, kx-ky+kz]\n",
+      "\n",
+      "spinor rot.         : | 0.000+0.000j  0.000-1.000j |\n",
+      "                      |-0.000-1.000j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 1. -0.  0.] ; angle = 1 pi, inversion : True\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 11 \n",
+      "\n",
+      "rotation : | -1  -1   0 |\n",
+      "           |  0   1   0 |\n",
+      "           |  0  -1  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx, -kx+ky-kz, -kz]\n",
+      "\n",
+      "spinor rot.         : |-0.000+0.000j -0.707+0.707j |\n",
+      "                      | 0.707+0.707j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.707107  0.707107  0.      ] ; angle = 1 pi, inversion : False\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 12 \n",
+      "\n",
+      "rotation : |  1   1   0 |\n",
+      "           |  0  -1   0 |\n",
+      "           |  0   1   1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx, kx-ky+kz, kz]\n",
+      "\n",
+      "spinor rot.         : |-0.000+0.000j  0.707-0.707j |\n",
+      "                      |-0.707-0.707j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 0.707107 -0.707107 -0.      ] ; angle = 1 pi, inversion : True\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 13 \n",
+      "\n",
+      "rotation : | -1   0   0 |\n",
+      "           |  1   0  -1 |\n",
+      "           | -1  -1   0 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx+ky-kz, -kz, -ky]\n",
+      "\n",
+      "spinor rot.         : | 0.000+0.000j -1.000+0.000j |\n",
+      "                      | 1.000+0.000j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 1. 0.] ; angle = 1 pi, inversion : False\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 14 \n",
+      "\n",
+      "rotation : |  1   0   0 |\n",
+      "           | -1   0   1 |\n",
+      "           |  1   1   0 |\n",
+      "\n",
+      "\n",
+      " gk = [kx-ky+kz, kz, ky]\n",
+      "\n",
+      "spinor rot.         : | 0.000+0.000j -1.000+0.000j |\n",
+      "                      | 1.000+0.000j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 1. 0.] ; angle = 1 pi, inversion : True\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 15 \n",
+      "\n",
+      "rotation : |  0   0  -1 |\n",
+      "           |  0  -1   0 |\n",
+      "           | -1   0   0 |\n",
+      "\n",
+      "\n",
+      " gk = [-kz, -ky, -kx]\n",
+      "\n",
+      "spinor rot.         : |-0.000+0.000j -0.707-0.707j |\n",
+      "                      | 0.707-0.707j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 0.707107  0.707107 -0.      ] ; angle = 1 pi, inversion : False\n",
+      "\n",
+      "time-reversal : True\n",
+      "\n",
+      " ### 16 \n",
+      "\n",
+      "rotation : |  0   0   1 |\n",
+      "           |  0   1   0 |\n",
+      "           |  1   0   0 |\n",
+      "\n",
+      "\n",
+      " gk = [kz, ky, kx]\n",
+      "\n",
+      "spinor rot.         : |-0.000+0.000j  0.707+0.707j |\n",
+      "                      |-0.707+0.707j  0.000+0.000j |\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.707107 -0.707107  0.      ] ; angle = 1 pi, inversion : True\n",
+      "\n",
+      "time-reversal : True\n",
       "mpgrid = [2 2 2], 8\n",
       "len(D_wann_list) = 0\n",
       "calculating Wannier functions for s at [[0, 0, 0]]\n",
       "calculating Wannier functions for p at [[0, 0, 0]]\n",
       "calculating Wannier functions for d at [[0, 0, 0]]\n",
       "len(D_wann_list) = 3\n",
-      "D.shape [(4, 8, 2, 2), (4, 8, 6, 6), (4, 8, 10, 10)]\n",
+      "D.shape [(4, 16, 2, 2), (4, 16, 6, 6), (4, 16, 10, 10)]\n",
       "num_wann 18\n",
       "D_wann_block_indices [[ 0  2]\n",
       " [ 2  8]\n",
-      " [ 8 18]]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'w90_data_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 18\u001b[0m\n\u001b[1;32m     15\u001b[0m dmn\u001b[38;5;241m.\u001b[39mset_D_wann_from_projections(projections\u001b[38;5;241m=\u001b[39m[(pos, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms\u001b[39m\u001b[38;5;124m'\u001b[39m), (pos,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp\u001b[39m\u001b[38;5;124m'\u001b[39m), (pos,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;124m'\u001b[39m)])\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# check the symmetries of the amn and eig files\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m w90data \u001b[38;5;241m=\u001b[39m \u001b[43mw90_data_list\u001b[49m[\u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meig is symmetric within the accuracy of : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdmn\u001b[38;5;241m.\u001b[39mcheck_eig(w90data\u001b[38;5;241m.\u001b[39meig)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mamn is symmetric within the accuracy of : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdmn\u001b[38;5;241m.\u001b[39mcheck_amn(w90data\u001b[38;5;241m.\u001b[39mamn)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'w90_data_list' is not defined"
+      " [ 8 18]]\n",
+      "saving to Fe_spd.dmn.npz : \n",
+      "calling w90 file with Fe_spd, dmn, tags=['D_wann_block_indices', '_NB', 'kpt2kptirr', 'kptirr', 'kptirr2kpt', 'kpt2kptirr_sym', '_NK', 'num_wann', 'comment', 'NKirr', 'Nsym', 'time_reversals'], read_npz=True, write_npz=True, kwargs={}\n"
      ]
     }
    ],
@@ -864,15 +999,66 @@
     "                            Ecut=100,\n",
     "                            normalize=False,\n",
     "                            magmom=[[0,0,1]],  # set the magnetic moments for a magnetic system (units do not matter)\n",
-    "                            include_TR=False)  # set include_TR=False if you do not want to include the symmetries involving time reversal\n",
+    "                            include_TR=True)  # set include_TR=False if you do not want to include the symmetries involving time reversal\n",
     "bandstructure.spacegroup.show()\n",
     "dmn = wberri.w90files.DMN(empty=True)\n",
     "dmn.from_irrep(bandstructure)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set projections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# now set the transformations of WFs. Make sure, the projections are consistent with the amn file\n",
     "pos = [[0,0,0]]\n",
     "dmn.set_D_wann_from_projections(projections=[(pos, 's'), (pos,'p'), (pos,'d')])\n",
+    "\n",
+    "#write on disk\n",
+    "dmn.to_npz(\"Fe_spd.dmn.npz\")\n",
+    "\n",
+    "# later can be read with\n",
+    "dmn_read_npz = wberri.w90files.DMN(seedname=\"Fe_spd\", read_npz=True)\n",
+    "\n",
+    "# or write to w90 file (wiss not work if include_TR is True)\n",
+    "#dmn.to_w90_file(\"Fe_spd\")\n",
+    "#dmn_read_w90 = wberri.w90files.DMN(seedname=\"Fe_spd\", read_npz=False)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fe_spd.dmn  Fe_spd.dmn.npz  wannierise.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/stepan/github/wannirrep/.conda/lib/python3.11/pty.py:89: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  pid, fd = os.forkpty()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls"
    ]
   },
   {
