--- a/examples/wannierise+sitesym_Fe/wannierise.ipynb
+++ b/examples/wannierise+sitesym_Fe/wannierise.ipynb
@@ -650,13 +650,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "irrep version: 1.11.1\n",
       "\n",
       "\n",
       " ---------- CRYSTAL STRUCTURE ---------- \n",
@@ -701,7 +702,7 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [-0.240772  0.120386  0.963087] ; angle =  0 , inversion : False\n",
+      "axis: [0.334882 0.131585 0.933027] ; angle =  0 , inversion : False\n",
       "\n",
       "time-reversal : False\n",
       "\n",
@@ -719,7 +720,7 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [-0.240772  0.120386  0.963087] ; angle =  0 , inversion : True\n",
+      "axis: [-0.334882  0.131585  0.933027] ; angle =  0 , inversion : True\n",
       "\n",
       "time-reversal : False\n",
       "\n",
@@ -732,8 +733,8 @@
       "\n",
       " gk = [kx-ky+kz, kx, ky]\n",
       "\n",
-      "spinor rot.         : | 0.707-0.707j  0.000+0.000j |\n",
-      "                      |-0.000+0.000j  0.707+0.707j |\n",
+      "spinor rot.         : | 0.707-0.707j  0.000-0.000j |\n",
+      "                      |-0.000-0.000j  0.707+0.707j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
@@ -750,8 +751,8 @@
       "\n",
       " gk = [-kx+ky-kz, -kx, -ky]\n",
       "\n",
-      "spinor rot.         : | 0.707-0.707j  0.000+0.000j |\n",
-      "                      |-0.000+0.000j  0.707+0.707j |\n",
+      "spinor rot.         : | 0.707-0.707j  0.000-0.000j |\n",
+      "                      |-0.000-0.000j  0.707+0.707j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
@@ -768,12 +769,12 @@
       "\n",
       " gk = [kz, kx-ky+kz, kx]\n",
       "\n",
-      "spinor rot.         : | 0.000-1.000j  0.000-0.000j |\n",
-      "                      |-0.000-0.000j  0.000+1.000j |\n",
+      "spinor rot.         : | 0.000+1.000j -0.000+0.000j |\n",
+      "                      | 0.000+0.000j  0.000-1.000j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 0. -0.  1.] ; angle = 1 pi, inversion : False\n",
+      "axis: [-0.  0. -1.] ; angle = 1 pi, inversion : False\n",
       "\n",
       "time-reversal : False\n",
       "\n",
@@ -805,7 +806,7 @@
       " gk = [ky, kz, kx-ky+kz]\n",
       "\n",
       "spinor rot.         : | 0.707+0.707j  0.000+0.000j |\n",
-      "                      | 0.000+0.000j  0.707-0.707j |\n",
+      "                      |-0.000+0.000j  0.707-0.707j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
@@ -822,12 +823,12 @@
       "\n",
       " gk = [-ky, -kz, -kx+ky-kz]\n",
       "\n",
-      "spinor rot.         : | 0.707+0.707j -0.000+0.000j |\n",
-      "                      | 0.000+0.000j  0.707-0.707j |\n",
+      "spinor rot.         : | 0.707+0.707j  0.000+0.000j |\n",
+      "                      |-0.000+0.000j  0.707-0.707j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 0. -0.  1.] ; angle = -1/2 pi, inversion : True\n",
+      "axis: [0. 0. 1.] ; angle = -1/2 pi, inversion : True\n",
       "\n",
       "time-reversal : False\n",
       "\n",
@@ -841,11 +842,11 @@
       " gk = [-ky, -kx, -kx+ky-kz]\n",
       "\n",
       "spinor rot.         : | 0.000+0.000j  0.000-1.000j |\n",
-      "                      |-0.000-1.000j  0.000+0.000j |\n",
+      "                      | 0.000-1.000j  0.000+0.000j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 1. -0.  0.] ; angle = 1 pi, inversion : False\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion : False\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -859,11 +860,11 @@
       " gk = [ky, kx, kx-ky+kz]\n",
       "\n",
       "spinor rot.         : | 0.000+0.000j  0.000-1.000j |\n",
-      "                      |-0.000-1.000j  0.000+0.000j |\n",
+      "                      | 0.000-1.000j  0.000+0.000j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 1. -0.  0.] ; angle = 1 pi, inversion : True\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion : True\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -881,7 +882,7 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [-0.707107  0.707107  0.      ] ; angle = 1 pi, inversion : False\n",
+      "axis: [-0.707107  0.707107 -0.      ] ; angle = 1 pi, inversion : False\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -899,7 +900,7 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 0.707107 -0.707107 -0.      ] ; angle = 1 pi, inversion : True\n",
+      "axis: [ 0.707107 -0.707107  0.      ] ; angle = 1 pi, inversion : True\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -912,12 +913,12 @@
       "\n",
       " gk = [-kx+ky-kz, -kz, -ky]\n",
       "\n",
-      "spinor rot.         : | 0.000+0.000j -1.000+0.000j |\n",
-      "                      | 1.000+0.000j  0.000+0.000j |\n",
+      "spinor rot.         : | 0.000+0.000j  1.000-0.000j |\n",
+      "                      |-1.000-0.000j  0.000-0.000j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [0. 1. 0.] ; angle = 1 pi, inversion : False\n",
+      "axis: [ 0. -1. -0.] ; angle = 1 pi, inversion : False\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -930,12 +931,12 @@
       "\n",
       " gk = [kx-ky+kz, kz, ky]\n",
       "\n",
-      "spinor rot.         : | 0.000+0.000j -1.000+0.000j |\n",
+      "spinor rot.         : | 0.000-0.000j -1.000+0.000j |\n",
       "                      | 1.000+0.000j  0.000+0.000j |\n",
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [0. 1. 0.] ; angle = 1 pi, inversion : True\n",
+      "axis: [-0.  1.  0.] ; angle = 1 pi, inversion : True\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -953,7 +954,7 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [ 0.707107  0.707107 -0.      ] ; angle = 1 pi, inversion : False\n",
+      "axis: [0.707107 0.707107 0.      ] ; angle = 1 pi, inversion : False\n",
       "\n",
       "time-reversal : True\n",
       "\n",
@@ -971,28 +972,29 @@
       "\n",
       "translation         :  [   0.0000   0.0000   0.0000 ] \n",
       "\n",
-      "axis: [-0.707107 -0.707107  0.      ] ; angle = 1 pi, inversion : True\n",
+      "axis: [-0.707107 -0.707107 -0.      ] ; angle = 1 pi, inversion : True\n",
       "\n",
-      "time-reversal : True\n",
-      "mpgrid = [2 2 2], 8\n",
-      "len(D_wann_list) = 0\n",
-      "calculating Wannier functions for s at [[0, 0, 0]]\n",
-      "calculating Wannier functions for p at [[0, 0, 0]]\n",
-      "calculating Wannier functions for d at [[0, 0, 0]]\n",
-      "len(D_wann_list) = 3\n",
-      "D.shape [(4, 16, 2, 2), (4, 16, 6, 6), (4, 16, 10, 10)]\n",
-      "num_wann 18\n",
-      "D_wann_block_indices [[ 0  2]\n",
-      " [ 2  8]\n",
-      " [ 8 18]]\n",
-      "saving to Fe_spd.dmn.npz : \n",
-      "calling w90 file with Fe_spd, dmn, tags=['D_wann_block_indices', '_NB', 'kpt2kptirr', 'kptirr', 'kptirr2kpt', 'kpt2kptirr_sym', '_NK', 'num_wann', 'comment', 'NKirr', 'Nsym', 'time_reversals'], read_npz=True, write_npz=True, kwargs={}\n"
+      "time-reversal : True\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'SpaceGroup' object has no attribute 'as_dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# dmn = wberri.w90files.DMN(empty=True)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# dmn.from_irrep(bandstructure)\u001b[39;00m\n\u001b[1;32m     15\u001b[0m spacegroup \u001b[38;5;241m=\u001b[39m bandstructure\u001b[38;5;241m.\u001b[39mspacegroup\n\u001b[0;32m---> 16\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[43mspacegroup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mas_dict\u001b[49m())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'SpaceGroup' object has no attribute 'as_dict'"
      ]
     }
    ],
    "source": [
     "\n",
+    "import irrep\n",
+    "print (f\"irrep version: {irrep.__version__}\")\n",
     "from irrep.bandstructure import BandStructure\n",
+    "from pathlib import Path\n",
     "path_data = Path(\"../../tests/data/Fe-222-pw/\")  # adjust path if needed to point to the data in the tests fo wannier-berri repository\n",
     "bandstructure = BandStructure(code='espresso',   # to work with VASP or abinit please refer to the documentation of irrep\n",
     "                            prefix=str(path_data / \"Fe\"),\n",
@@ -1001,8 +1003,10 @@
     "                            magmom=[[0,0,1]],  # set the magnetic moments for a magnetic system (units do not matter)\n",
     "                            include_TR=True)  # set include_TR=False if you do not want to include the symmetries involving time reversal\n",
     "bandstructure.spacegroup.show()\n",
-    "dmn = wberri.w90files.DMN(empty=True)\n",
-    "dmn.from_irrep(bandstructure)\n",
+    "# dmn = wberri.w90files.DMN(empty=True)\n",
+    "# dmn.from_irrep(bandstructure)\n",
+    "spacegroup = bandstructure.spacegroup\n",
+    "print (spacegroup.as_dict())\n",
     "\n"
    ]
   },
@@ -1063,6 +1067,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%which` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%which python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
