UNK working, fixed test with FGaAs by not reading npz

--- a/examples/tutorial-tetrahedral-grids.ipynb
+++ b/examples/tutorial-tetrahedral-grids.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "79f7552d",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
     "    )\n",
     "\n",
     "generators=[\"C3z\",\"C2y\",\"TimeReversal\"]\n",
-    "system.set_symmetry(generators)\n",
+    "system.set_pointgroup(generators)\n",
     "print (\"Number of R-vecotors used in the model:\",(len(param['matrices']['Ham'].keys()))) "
    ]
   },
