test for from_gpaw

--- a/examples/soc_nscf/MnTe/check_sym.ipynb
+++ b/examples/soc_nscf/MnTe/check_sym.ipynb
@@ -303,8 +303,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5788b890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-02 22:27:09,263\tINFO util.py:154 -- Missing packages: ['ipywidgets']. Run `pip install -U ipywidgets`, then restart the notebook server for rich notebook output.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "typat used for spacegroup detection (accounting magmoms): [np.int64(25003), np.int64(25001), np.int64(52002), np.int64(52002)]\n",
+      "\n",
+      "\n",
+      " ---------- CRYSTAL STRUCTURE ---------- \n",
+      "\n",
+      "\n",
+      "Cell vectors in angstroms:\n",
+      "\n",
+      "      Vectors of DFT cell       \n",
+      "a0 =  4.1340   0.0000   0.0000  \n",
+      "a1 = -2.0670   3.5801   0.0000  \n",
+      "a2 =  0.0000   0.0000   6.6520  \n",
+      "\n",
+      "\n",
+      "\n",
+      " ---------- SPACE GROUP ----------- \n",
+      "\n",
+      "\n",
+      "Space group: P-3m11' (# 164.86)\n",
+      "Number of symmetries: 24 (mod. lattice translations)\n",
+      "\n",
+      " ### 1 \n",
+      "\n",
+      "rotation : |  1   0   0 |\n",
+      "           |  0   1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx, ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle =  0 , inversion: False, time reversal: False\n",
+      "\n",
+      " ### 2 \n",
+      "\n",
+      "rotation : |  1   0   0 |\n",
+      "           |  0   1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx, -ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle =  0 , inversion: False, time reversal: True\n",
+      "\n",
+      " ### 3 \n",
+      "\n",
+      "rotation : | -1   0   0 |\n",
+      "           |  0  -1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx, -ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle =  0 , inversion: True, time reversal: False\n",
+      "\n",
+      " ### 4 \n",
+      "\n",
+      "rotation : | -1   0   0 |\n",
+      "           |  0  -1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx, ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle =  0 , inversion: True, time reversal: True\n",
+      "\n",
+      " ### 5 \n",
+      "\n",
+      "rotation : |  0  -1   0 |\n",
+      "           |  1  -1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx-ky, kx, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = 2/3 pi, inversion: False, time reversal: False\n",
+      "\n",
+      " ### 6 \n",
+      "\n",
+      "rotation : |  0  -1   0 |\n",
+      "           |  1  -1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx+ky, -kx, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = 2/3 pi, inversion: False, time reversal: True\n",
+      "\n",
+      " ### 7 \n",
+      "\n",
+      "rotation : |  0   1   0 |\n",
+      "           | -1   1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx+ky, -kx, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = 2/3 pi, inversion: True, time reversal: False\n",
+      "\n",
+      " ### 8 \n",
+      "\n",
+      "rotation : |  0   1   0 |\n",
+      "           | -1   1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx-ky, kx, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = 2/3 pi, inversion: True, time reversal: True\n",
+      "\n",
+      " ### 9 \n",
+      "\n",
+      "rotation : | -1   1   0 |\n",
+      "           | -1   0   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [ky, -kx-ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = -2/3 pi, inversion: False, time reversal: False\n",
+      "\n",
+      " ### 10 \n",
+      "\n",
+      "rotation : | -1   1   0 |\n",
+      "           | -1   0   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-ky, kx+ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = -2/3 pi, inversion: False, time reversal: True\n",
+      "\n",
+      " ### 11 \n",
+      "\n",
+      "rotation : |  1  -1   0 |\n",
+      "           |  1   0   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-ky, kx+ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = -2/3 pi, inversion: True, time reversal: False\n",
+      "\n",
+      " ### 12 \n",
+      "\n",
+      "rotation : |  1  -1   0 |\n",
+      "           |  1   0   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [ky, -kx-ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0. 0. 1.] ; angle = -2/3 pi, inversion: True, time reversal: True\n",
+      "\n",
+      " ### 13 \n",
+      "\n",
+      "rotation : |  0   1   0 |\n",
+      "           |  1   0   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [ky, kx, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.5      -0.866025  0.      ] ; angle = 1 pi, inversion: False, time reversal: False\n",
+      "\n",
+      " ### 14 \n",
+      "\n",
+      "rotation : |  0   1   0 |\n",
+      "           |  1   0   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-ky, -kx, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.5      -0.866025  0.      ] ; angle = 1 pi, inversion: False, time reversal: True\n",
+      "\n",
+      " ### 15 \n",
+      "\n",
+      "rotation : |  0  -1   0 |\n",
+      "           | -1   0   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-ky, -kx, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0.5      0.866025 0.      ] ; angle = 1 pi, inversion: True, time reversal: False\n",
+      "\n",
+      " ### 16 \n",
+      "\n",
+      "rotation : |  0  -1   0 |\n",
+      "           | -1   0   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [ky, kx, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [0.5      0.866025 0.      ] ; angle = 1 pi, inversion: True, time reversal: True\n",
+      "\n",
+      " ### 17 \n",
+      "\n",
+      "rotation : |  1  -1   0 |\n",
+      "           |  0  -1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx, -kx-ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion: False, time reversal: False\n",
+      "\n",
+      " ### 18 \n",
+      "\n",
+      "rotation : |  1  -1   0 |\n",
+      "           |  0  -1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx, kx+ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion: False, time reversal: True\n",
+      "\n",
+      " ### 19 \n",
+      "\n",
+      "rotation : | -1   1   0 |\n",
+      "           |  0   1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx, kx+ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion: True, time reversal: False\n",
+      "\n",
+      " ### 20 \n",
+      "\n",
+      "rotation : | -1   1   0 |\n",
+      "           |  0   1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx, -kx-ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [1. 0. 0.] ; angle = 1 pi, inversion: True, time reversal: True\n",
+      "\n",
+      " ### 21 \n",
+      "\n",
+      "rotation : | -1   0   0 |\n",
+      "           | -1   1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx-ky, ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 0.5      -0.866025  0.      ] ; angle = 1 pi, inversion: False, time reversal: False\n",
+      "\n",
+      " ### 22 \n",
+      "\n",
+      "rotation : | -1   0   0 |\n",
+      "           | -1   1   0 |\n",
+      "           |  0   0  -1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx+ky, -ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [ 0.5      -0.866025  0.      ] ; angle = 1 pi, inversion: False, time reversal: True\n",
+      "\n",
+      " ### 23 \n",
+      "\n",
+      "rotation : |  1   0   0 |\n",
+      "           |  1  -1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [kx+ky, -ky, kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.5       0.866025  0.      ] ; angle = 1 pi, inversion: True, time reversal: False\n",
+      "\n",
+      " ### 24 \n",
+      "\n",
+      "rotation : |  1   0   0 |\n",
+      "           |  1  -1   0 |\n",
+      "           |  0   0   1 |\n",
+      "\n",
+      "\n",
+      " gk = [-kx-ky, ky, -kz]\n",
+      "\n",
+      "translation         :  [   0.0000   0.0000   0.0000 ] \n",
+      "\n",
+      "axis: [-0.5       0.866025  0.      ] ; angle = 1 pi, inversion: True, time reversal: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gpaw import GPAW\n",
+    "calc = GPAW('mnte-nscf.gpw')\n",
+    "from wannierberri.symmetry import get_spacegroup_from_gpaw\n",
+    "sg = get_spacegroup_from_gpaw(calc)\n",
+    "sg.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fce2078d",
    "metadata": {},
    "outputs": [],
    "source": []
