turned from_...  and load_npz into classmethods

--- a/examples/soc_nscf/MnTe/plot.ipynb
+++ b/examples/soc_nscf/MnTe/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3a021251",
    "metadata": {},
    "outputs": [
@@ -303,8 +303,8 @@
     "from wannierberri.w90files.chk import CheckPoint as CHK\n",
     "from wannierberri.parallel import Parallel, Serial\n",
     "\n",
-    "system_dw = System_R().load_npz(\"system_dw\")\n",
-    "system_up = System_R().load_npz(\"system_up\")\n",
+    "system_dw = System_R.from_npz(\"system_dw\")\n",
+    "system_up = System_R.from_npz(\"system_up\")\n",
     "\n",
     "parallel = Parallel(num_cpus=16)\n",
     "# _interlaced()\n",
