--- a/examples/soc_nscf/MnTe/check_sym.ipynb
+++ b/examples/soc_nscf/MnTe/check_sym.ipynb
@@ -239,10 +239,10 @@
     "        [2 / 3, 1 / 3, 3 / 4],\n",
     "    ]\n",
     ")\n",
-    "typeat = [1, 1, 2, 2]\n",
+    "typat = [1, 1, 2, 2]\n",
     "magmom = [[0, 1, 0], [0, -1, 0], [0, 0, 0], [0, 0, 0]]\n",
     "\n",
-    "mg = SpaceGroup.from_cell(real_lattice=lattice, positions=positions, typat=typeat,\n",
+    "mg = SpaceGroup.from_cell(real_lattice=lattice, positions=positions, typat=typat,\n",
     "                          magmom=magmom)\n",
     "mg.show()\n",
     "pointgroup = PointGroup(spacegroup=mg)\n",
