fixed bug in path with missing last point before the break Grid/Path parameters are explicitly system/real_lattice/recip_lattice/pointgroup

--- a/examples/tutorial-tetrahedral-grids.ipynb
+++ b/examples/tutorial-tetrahedral-grids.ipynb
@@ -300,7 +300,7 @@
     "    plt.close()\n",
     "\n",
     "pth = list(\"AGHALHKGMK\")+[None,\"L\",\"M\"]\n",
-    "path=wberri.Path(system,\n",
+    "path=wberri.Path(system=system,\n",
     "                 nodes=[ nodes[k] for k in pth ],\n",
     "                 labels=[s for s in pth if s is not None],\n",
     "                 length=200 )     \n",
@@ -378,7 +378,7 @@
    ],
    "source": [
     "x = 0.15\n",
-    "path=wberri.Path(system,\n",
+    "path=wberri.Path(system=system,\n",
     "     nodes=[\n",
     "             np.array(nodes[\"G\"])*x+np.array(nodes[\"H\"])*(1-x),\n",
     "              nodes[\"H\"],\n",
@@ -442,7 +442,7 @@
     "\n",
     "internal = dict(kwargs_formula=dict(external_terms=False))\n",
     "# Set a grid \n",
-    "grid = wberri.Grid(system, length=200, NKFFT=[6,6,8] )   # length [ Ang] ~= 2*pi/dk\n",
+    "grid = wberri.Grid(system=system, length=200, NKFFT=[6,6,8] )   # length [ Ang] ~= 2*pi/dk\n",
     "\n",
     "#calculators [\"ohmic\"] = wberri.calculators.static.Ohmic_FermiSea(**parameters)\n",
     "#calculators [\"dos\"] = wberri.calculators.static.DOS(**parameters)\n",
@@ -949,7 +949,7 @@
     "#        (\"trigonalH-0.25\",  wberri.grid.GridTrigonalH(system, length=length, NKFFT=1,x=0.25 ) ),\n",
     "        (\"trigonalH-0.15\",  wberri.grid.GridTrigonalH(system, length=length, NKFFT=1,x=0.15 ) ),\n",
     "#        (\"trigonalH-0.1\",  wberri.grid.GridTrigonalH(system, length=length, NKFFT=1,x=0.1 ) ),\n",
-    " #       (\"parallel\", wberri.grid.Grid(system, length=length, NKFFT=NKFFT ) ),\n",
+    " #       (\"parallel\", wberri.grid.Grid(system=system, length=length, NKFFT=NKFFT ) ),\n",
     "                ]:\n",
     "        result[(length,grid[0])] = wberri.run(system,\n",
     "            grid=grid[1],\n",
