--- a/examples/soc_nscf/MnTe/plot.ipynb
+++ b/examples/soc_nscf/MnTe/plot.ipynb
@@ -569,7 +569,7 @@
    "source": [
     "\n",
     "kz = 0.35 / system_dw.recip_lattice[2, 2]\n",
-    "path = Path(system_dw,\n",
+    "path = Path(system=system_dw,\n",
     "            nodes=[\n",
     "                [2 / 3, -1 / 3, 0],\n",
     "                [0, 0, 0],\n",
